-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8-shenandoah, 11-shenandoah, 13, 14
-
Component/s: hotspot
-
b11
Downstream builds report a build failure when STATIC_ASSERT is not defined via some transitive include:
https://mail.openjdk.java.net/pipermail/loom-dev/2019-August/000669.html
Better to have it defined explicitly.
https://mail.openjdk.java.net/pipermail/loom-dev/2019-August/000669.html
Better to have it defined explicitly.
- relates to
-
JDK-8230024 Shenandoah: remove unnecessary ShenandoahTimingConverter
-
- Resolved
-
-
JDK-8222992 Shenandoah: Pre-evacuate all roots
-
- Resolved
-